# CLOVER-GUI

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  global_settings.yaml  requirements.txt  setup.cfg  setup.py  test_gui.py
.github/: CODEOWNERS
src/: __main__.py  __utils__.py  configuration.py  main.py  v0.1_main.py
src/clover_gui/: __init__.py  __main__.py  __utils__.py  configuration.py  details.py  load_location.py  main_menu.py  new_location.py  post_run.py  preferences.py  running.py  scenario.py  splash_screen.py  v0.1_main.py
src/clover_gui/data/images/: 100x  100x-0
src/clover_gui/details/: conversion.py  details.py  diesel.py  finance.py  ghgs.py  grid.py  load.py  solar.py  storage.py  system.py  transmission.py  wind.py
