[metadata]
name = clover-energy-gui
version = 1.0.0a1
author = Ben Winchester and Hamish Beath
author_email = benedict.winchester@gmail.com,hamishbeath@outlook.com
description = A Graphical User Interface for CLOVER (Continuous Lifetime Optimisation of Variable Electricity Resources)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLOVER-energy/CLOVER-GUI
project_urls =
    Bug Tracker = https://github.com/CLOVER-energy/CLOVER-GUI/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    cx-Freeze >= 6.15.1
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.package_data]
* = images/*
