[metadata]
name = clovergui
version = 1.0.0b4
author = Ben Winchester and Hamish Beath
author_email = benedict.winchester@gmail.com,hamishbeath@outlook.com
description = A Graphical User Interface for CLOVER (Continuous Lifetime Optimisation of Variable Electricity Resources)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CLOVER-energy/CLOVER-GUI
project_urls =
    Bug Tracker = https://github.com/CLOVER-energy/CLOVER-GUI/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    clover-energy >=5.3.0
    customtkinter>=5.2.0
    cx-Freeze >=6.15.5
    pandas >=1.2.3
    PyYAML >=5.4.1
    RangeSlider>=2021.7.4
    seaborn >=0.11.1
    ttkbootstrap>=1.10.1
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    clovergui = clover_guicou:main

[options.packages.find]
where = src

[options.package_data]
* = data/images/*
